Added code style manual to README